# django-online-store

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Makefile  README.md  requirements.txt
diploma-frontend/diploma_frontend.egg-info/: SOURCES.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  megano_dashboard.json  nginx.conf  prometheus.yml
happy_shop/: manage.py
megano/: .env.example  Makefile  conftest.py  docker-compose-kafka.yml  pyproject.toml  requirements.txt
megano/api/: auth_views.py  middleware.py  profile_views.py  serializers.py  tests.py  urls.py  views.py
megano/app_users/: admin.py  auth_views.py  models.py  profile_serializers.py  profile_views.py  tests.py  urls.py  utils.py
megano/app_users/migrations/: 0001_initial.py  0002_add_required_data.py  0002_alter_customuser_email.py  0002_alter_profile_email.py  0003_alter_customuser_email.py
megano/basket/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
megano/basket/migrations/: 0001_initial.py  0002_alter_basket_session_key.py
megano/catalog/: admin.py  catalog_views.py  mixins.py  models.py  serializers.py  urls.py  utils.py
megano/catalog/fixtures/: categories.json
megano/catalog/management/commands/: generate_test_data.py  load_demo_data.py
megano/catalog/migrations/: 0001_initial.py  0002_alter_banner_options.py  0002_category_is_active.py  0003_alter_product_ordering_index_alter_review_rate.py
megano/catalog/serializers/: banners_serializers.py  catalog_serializers.py  product_image_serializer.py  product_serializer.py  product_serializers.py  review_serializers.py  sales_serializers.py  specification_serializer.py  tag_serializers.py
megano/catalog/tests/: tests_catalog.py  tests_categories.py  tests_limited.py  tests_popular.py  tests_product.py  tests_review_create.py  tests_sales.py  tests_serializers.py  tests_tags.py
megano/catalog/views/: banners_views.py  catalog_views.py  categories_views.py  limited_views.py  popular_views.py  product_views.py  review_create_views.py  sales_views.py  tags_views.py
megano/kafka_integration/: apps.py  config.py  models.py  producer.py  publisher.py
megano/kafka_integration/consumers/: order_paid_consumer.py
megano/kafka_integration/management/commands/: run_warehouse_consumer.py
megano/kafka_integration/migrations/: 0001_initial.py
megano/megano/: celery.py  decorators.py  error_handlers.py  middleware.py  permissions.py  settings.py  urls.py
megano/megano/tests/: tests_error_handlers_decorators.py
megano/order/: admin.py  mixins.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
megano/order/migrations/: 0001_initial.py  0002_order_deleted_at_order_is_deleted.py  0003_alter_order_payment_type.py  0004_deliverycosts_order_delivery_price_order_session_key_and_more.py
megano/order/templates/admin/order/: change_form.html
megano/order/tests/: tests_order_model_mixin.py  tests_order_views_serializers.py
megano/payment/: admin.py  models.py  queue.py  serializers.py  tests.py  urls.py  views.py
megano/payment/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_alter_payment_status.py  0004_payment_error_text.py
(+13 files in other folders)
