[tool.poetry]
name = "megano"
version = "0.1.0"
description = ""
authors = ["Anastasiya Gogokhiya <gogiau@bk.ru>"]

[tool.poetry.dependencies]
python = ">=3.12"
amqp = "5.3.1"
asgiref = "3.11.1"
attrs = "26.1.0"
billiard = "4.2.4"
celery = "5.6.3"
certifi = "2026.4.22"
charset-normalizer = "3.4.7"
gunicorn = "^23.0"
click = "8.3.3"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1.2"
click-repl = "0.3.0"
coverage = "7.13.5"
django = "6.0.3"
django-extensions = "4.1"
django-filter = "25.2"
djangorestframework = "3.17.1"
drf-spectacular = "0.29.0"
factory-boy = "3.3.3"
faker = "40.15.0"
idna = "3.13"
inflection = "0.5.1"
iniconfig = "2.3.0"
jsonschema = "4.26.0"
jsonschema-specifications = "2025.9.1"
kombu = "5.6.2"
librt = "0.9.0"
model-bakery = "1.23.4"
mypy = "1.20.2"
mypy-extensions = "1.1.0"
packaging = "26.1"
pathspec = "1.1.1"
pillow = "12.2.0"
pluggy = "1.6.0"
prompt-toolkit = "3.0.52"
psycopg2-binary = "2.9.10"
pygments = "2.20.0"
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-django = "4.12.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.2"
pytz = "2026.1.post1"
pyyaml = "6.0.3"
redis = "7.4.0"
referencing = "0.37.0"
requests = "2.33.1"
rpds-py = "0.30.0"
ruff = "0.15.12"
setuptools = "82.0.1"
six = "1.17.0"
sqlparse = "0.5.5"
typing-extensions = "4.15.0"
tzdata = "2026.2"
tzlocal = "5.3.1"
uritemplate = "4.2.0"
urllib3 = "2.7.0"
vine = "5.1.0"
wcwidth = "0.7.0"
django-prometheus = "^2.4.1"

[tool.poetry.group.dev.dependencies]
types-requests = ">=2.33.0.20260508"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "*.pyc",
    "migrations",
    "static",
    "media",
    "diploma-frontend",
    "catalog/management/commands",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*/admin.py" = ["E731"]
"*/migrations/*" = ["E501", "F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [
    ".*/migrations/.*",
    ".*/media/.*",
    ".*/diploma-frontend/.*",
    ".*/tests/.*",
    ".*/management/commands/.*",
    ".*/__pycache__/.*",
    ".*\\.pyc$",
]

[[tool.mypy.overrides]]
module = "catalog.management.commands.load_demo_data"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.admin"
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "megano.settings"
addopts = "--reuse-db"
python_files = ["test_*.py", "tests.py", "*_test.py", "tests_*.py"]
testpaths = ["app_users", "catalog", "basket", "order", "payment"]

[tool.coverage.run]
source = ["app_users", "catalog", "basket", "order", "payment", "megano"]
omit = [
    ".venv/*",
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "*/api/*",
    "*/media/*",
    "*/catalog/management/commands/*",
]

[tool.coverage.report]
omit = [
    "*/admin.py",
    "*/apps.py",
    "*/__init__.py",
    "*/settings.py",
    "*/urls.py",
    "*/middleware.py",
    "*/decorators.py",
    "*/permissions.py",
    "*/tests.py",
]
